---
source: crates/ruff_linter/src/rules/flake8_bandit/mod.rs
---
S112 `try`-`except`-`continue` detected, consider logging the exception
 --> S112.py:4:5
  |
4 | /     except Exception:
5 | |         continue
  | |________________^
  |

S112 `try`-`except`-`continue` detected, consider logging the exception
  --> S112.py:9:5
   |
 9 | /     except:
10 | |         continue
   | |________________^
   |

S112 `try`-`except`-`continue` detected, consider logging the exception
  --> S112.py:14:5
   |
14 | /     except (Exception,):
15 | |         continue
   | |________________^
   |

S112 `try`-`except`-`continue` detected, consider logging the exception
  --> S112.py:19:5
   |
19 | /     except (Exception, ValueError):
20 | |         continue
   | |________________^
   |
